# SpirX

./: CONTRIBUTING.md  README.md
Documentation/Proposals/: RCOS-Current.md  RCOS-Spring2017.md
SpirX/: CMakeLists.txt
SpirX/Doc/: spirx.adoc
SpirX/SpirX/: CMakeLists.txt
SpirX/SpirX/Include/spirx/: spirx.h
SpirX/SpirX/Loader/Platform/Linux/Source/: ldrGetExportList.c  ldrInitialize.c  sxQueryAddress.c  sxQueryExports.c
SpirX/SpirX/Platform/Linux/Source/: ldrInitialize.c  sxQueryAddress.c  sxQueryExports.c
SpirX/SpirX/Tests/: main.c
blog.spirx.io/: config.toml
blog.spirx.io/content/post/: a-new-approach.md  an-intro-to-solum.md  flawed-from-the-start.md  the-fun-of-modularity.md
docs.spirx.io/: config.toml
docs.spirx.io/content/: index.md
docs.spirx.io/content/guide/: index.md
docs.spirx.io/content/loader/: index.md
docs.spirx.io/content/window/: index.md
